syntax="proto3";

package com.tokenHandler;

message Node {
  string id=1;
  string address=2;
  int32 port=3;
}

message Token{
  int32 hopCount=1;
  double aggregatedValue=2;
  Node starter=3;
}

message TokenResponse{
  bool ok=1;
  Node nextHop=2;
}

service SendToken{
  rpc send (stream Token) returns (stream TokenResponse) {}
}